WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100619
[touchadjustment] touch-links-two-finger-tap test pass incorrectly
https://bugs.webkit.org/show_bug.cgi?id=100619
Summary
[touchadjustment] touch-links-two-finger-tap test pass incorrectly
Terry Anderson
Reported
2012-10-28 16:18:05 PDT
Once the changes in
https://bugs.webkit.org/show_bug.cgi?id=96810
land, I will make similar fixes to the touch positions in touchadjustment/touch-links-two-finger-tap.html.
Attachments
Patch
(4.11 KB, patch)
2012-10-29 13:38 PDT
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Patch
(4.15 KB, patch)
2012-10-31 10:13 PDT
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Terry Anderson
Comment 1
2012-10-29 13:38:01 PDT
Created
attachment 171301
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-10-30 02:05:25 PDT
Comment on
attachment 171301
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171301&action=review
> Tools/DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:1211 > case WebInputEvent::GestureTwoFingerTap: > event.x = point.x; > event.y = point.y; > + if (arguments.size() >= 4) { > + event.data.twoFingerTap.firstFingerWidth = static_cast<float>(arguments[2].toDouble()); > + event.data.twoFingerTap.firstFingerHeight = static_cast<float>(arguments[3].toDouble()); > + } > break;
IS this code really chromium specific?
Terry Anderson
Comment 3
2012-10-31 10:13:40 PDT
Created
attachment 171679
[details]
Patch
Terry Anderson
Comment 4
2012-10-31 10:15:39 PDT
(In reply to
comment #2
)
> (From update of
attachment 171301
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=171301&action=review
> > > Tools/DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:1211 > > case WebInputEvent::GestureTwoFingerTap: > > event.x = point.x; > > event.y = point.y; > > + if (arguments.size() >= 4) { > > + event.data.twoFingerTap.firstFingerWidth = static_cast<float>(arguments[2].toDouble()); > > + event.data.twoFingerTap.firstFingerHeight = static_cast<float>(arguments[3].toDouble()); > > + } > > break; > > IS this code really chromium specific?
Yes, it is chromium specific since it refers to the |twoFingerTap| struct inside of chromium's WebInputEvent.h
WebKit Review Bot
Comment 5
2012-10-31 15:11:18 PDT
Comment on
attachment 171679
[details]
Patch Clearing flags on attachment: 171679 Committed
r133082
: <
http://trac.webkit.org/changeset/133082
>
WebKit Review Bot
Comment 6
2012-10-31 15:11:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug