[touchadjustment] touch-links-two-finger-tap test pass incorrectly https://bugs.webkit.org/show_bug.cgi?id=100619

Reviewed by Antonio Gomes.

Tools:

Store the touch area when sending a GestureTwoFingerTap event.

* DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:
(WebTestRunner):
(WebTestRunner::EventSender::gestureEvent):

LayoutTests:

Make use of the gesture's touch area when testing the correct targeting of elements.

* touchadjustment/touch-links-two-finger-tap.html:


Canonical link: https://commits.webkit.org/118954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133082 268f45cc-cd09-0410-ab3c-d52691b4dbfc